--- a/advmeds-device-management_lib/build.gradle
+++ b/advmeds-device-management_lib/build.gradle
@@ -1,5 +1,9 @@
+plugins {
+    id 'maven-publish'
+}
 apply plugin: 'maven-publish'
 apply plugin: 'com.android.library'
+
 
 android {
     compileSdkVersion 31
@@ -29,5 +33,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'org.gradle.sample'
+            artifactId = 'library'
+            version = '1.1'
+
+        }
+    }
 }
